# ProjectLLM

./: .env.example  .gitignore  AGENTS.md  README.md  __main__.py  main.py  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
app/controllers/: __init__.py  factories.py  note_controller.py  note_export_controller.py  transcription_controller.py  workspace_controller.py
capture/: audio_recorder.py
core/: __init__.py  environment.py  errors.py  models.py
notes/: __init__.py  azure_openai_note_generator.py  base.py  exporters.py  fake_note_generator.py  gemini_note_generator.py  note_types.py  prompt_builder.py
scripts/: check_secrets.py  test_microphone.py
speakers/: __init__.py  models.py
storage/: __init__.py  session_store.py  workspace_settings.py
tests/: test_audio_recorder.py  test_azure_openai_note_generator.py  test_check_secrets.py  test_controller_factories.py  test_core_models.py  test_environment.py  test_exporters.py  test_fake_note_generator.py  test_faster_whisper_transcriber.py  test_gemini_note_generator.py  test_input_panel.py  test_main_entrypoint.py  test_main_window.py  test_note_controller.py  test_note_export_controller.py  test_note_options_panel.py  test_note_types.py  test_note_view_panel.py  test_prompt_builder.py  test_session_cleanup_dialog.py  test_session_store.py  test_transcript_panel.py  test_transcript_store.py  test_transcription_controller.py  test_workspace_controller.py
transcription/: __init__.py  base.py  faster_whisper_transcriber.py  transcript_store.py
ui/: main_window.py  workers.py
(+6 files in other folders)
