[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectllm"
version = "0.1.0"
description = "Desktop transcription and AI notes app rebuild."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "faster-whisper>=1.2.1",
]

[tool.setuptools.packages.find]
include = ["core", "transcription"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
